@@ -4,6 +4,7 @@ Products.CMFCalendar Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- Fixed ViewPageTemplateFile import to use the correct version from Five.
 
 2.2.0-beta (2009-12-06)
 -----------------------
